--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -9,13 +9,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.williammerle.workshop2.DashboardActivity">
+    tools:context="com.example.williammerle.workshop2.DashboardActivity"
+    android:background="@drawable/background_activity">
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar2"
-        android:progress="30"
+        android:progress="100"
         android:layout_width="150dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
@@ -26,19 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/time" />
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:id="@+id/tablelayout"
-        android:layout_below="@+id/time"
-        android:layout_alignParentStart="true"
-        android:layout_height="200dp"
-        android:layout_marginTop="50dp"
-        android:stretchColumns="*"
-        android:gravity="center" >
-
-    </TableLayout>
+        android:id="@+id/time"
+        android:textStyle="normal|bold"
+        android:textSize="18sp" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -47,4 +38,16 @@
         android:layout_height="400dp"
         android:layout_below="@+id/tablelayout"
         android:layout_alignParentStart="true" />
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:id="@+id/tablelayout"
+        android:layout_height="200dp"
+        android:layout_marginTop="50dp"
+        android:stretchColumns="*"
+        android:gravity="center"
+        android:layout_below="@+id/time"
+        android:layout_alignParentStart="true">
+
+    </TableLayout>
 </RelativeLayout>
