--- a/app/src/main/res/layout/activity_mj_maths.xml
+++ b/app/src/main/res/layout/activity_mj_maths.xml
@@ -8,16 +8,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.williammerle.workshop2.MjMathsActivity">
+    tools:context="com.example.williammerle.workshop2.MjMathsActivity"
+    android:background="@drawable/background_activity">
 
     <TextView
         android:text="Opération"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:id="@+id/question"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textColor="@android:color/background_light" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -28,25 +33,20 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="66dp"
         android:id="@+id/answer"
-        android:background="#CCCCCC"
-        android:inputType="number" />
+        android:background="#000000"
+        android:inputType="number"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:textColor="@android:color/holo_orange_light" />
 
     <Button
-        android:text="Envoyer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/send" />
-
-    <TextView
-        android:text="Time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:id="@+id/time"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/send"
+        android:background="@drawable/go"
+        android:layout_below="@+id/answer"
+        android:layout_alignEnd="@+id/answer"
+        android:layout_marginEnd="41dp"
+        android:layout_marginTop="48dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -56,5 +56,15 @@
         android:layout_marginBottom="30dp"
         android:id="@+id/errormaths"
         android:textColor="#FF0000" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/time"
+        android:textSize="18sp"
+        android:textStyle="normal|bold"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Time" />
 
 </RelativeLayout>
