--- a/app/src/main/res/layout/activity_mj_push.xml
+++ b/app/src/main/res/layout/activity_mj_push.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.williammerle.workshop2.MjPushActivity">
+    tools:context="com.example.williammerle.workshop2.MjPushActivity"
+    android:background="@drawable/background_activity">
 
     <TextView
         android:text="Tapper le plus de fois possible"
@@ -20,40 +21,43 @@
         android:layout_marginTop="23dp"
         android:id="@+id/name" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/name"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="17dp"
-        android:layout_above="@+id/time"
-        android:src="@drawable/mj_push"
-        android:onClick="inscrementScore"
-        />
-
-    <TextView
-        android:text="Time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:id="@+id/time"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
     <TextView
         android:text="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/score"
+        android:textSize="18sp"
+        android:textStyle="normal|bold"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/textView7" />
+        android:layout_toStartOf="@+id/name" />
 
     <TextView
         android:text="Score : "
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/textView7"
-        android:layout_alignParentBottom="true"
+        android:textStyle="normal|bold"
+        android:textSize="18sp"
+        android:layout_alignBaseline="@+id/time"
+        android:layout_alignBottom="@+id/time"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/time"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        android:textStyle="normal|bold" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/mj_push"
+        android:onClick="inscrementScore"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
