--- a/app/src/main/res/layout/activity_mj_top_bottom.xml
+++ b/app/src/main/res/layout/activity_mj_top_bottom.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.williammerle.workshop2.MjTopBottomActivity">
+    tools:context="com.example.williammerle.workshop2.MjTopBottomActivity"
+    android:background="@drawable/background_activity">
 
     <TextView
         android:text="Time"
@@ -17,15 +18,9 @@
         android:layout_marginTop="50dp"
         android:id="@+id/time"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/seekBar"
-        android:rotation="270"/>
+        android:textSize="18sp"
+        android:textStyle="normal|bold" />
 
     <TextView
         android:text="0"
@@ -33,7 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView6"
         android:layout_toEndOf="@+id/textView6"
-        android:id="@+id/score" />
+        android:id="@+id/score"
+        android:textStyle="normal|bold"
+        android:textSize="18sp" />
 
     <TextView
         android:text="Score : "
@@ -41,6 +38,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView6"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="18sp" />
+
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/seekBar"
+        android:rotation="270"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:background="@android:color/background_light" />
 
 </RelativeLayout>
