--- a/app/src/main/res/layout/activity_mj_whip.xml
+++ b/app/src/main/res/layout/activity_mj_whip.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.williammerle.workshop2.MjWhipActivity">
+    tools:context="com.example.williammerle.workshop2.MjWhipActivity"
+    android:background="@drawable/background_activity">
 
     <TextView
         android:text="Score : "
@@ -16,16 +17,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView10"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="Time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:id="@+id/time"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="18sp"
+        android:textStyle="normal|bold" />
 
     <TextView
         android:text="0"
@@ -33,13 +27,26 @@
         android:layout_height="wrap_content"
         android:id="@+id/score"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/textView10" />
+        android:layout_toEndOf="@+id/textView10"
+        android:textSize="18sp"
+        android:textStyle="normal|bold" />
 
     <com.appaholics.circularseekbar.CircularSeekBar
             android:id="@+id/circularSeekBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView10" />
+
+    <TextView
+        android:text="Time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/time"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        android:textStyle="normal|bold" />
 
 </RelativeLayout>
